src/istio_monitor/istio_control_config/serviceentries/online-boutique/allow-egress-googleapis.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1alpha3","kind":"ServiceEntry","metadata":{"annotations":{},"name":"allow-egress-googleapis","namespace":"online-boutique"},"spec":{"hosts":["accounts.google.com","*.googleapis.com"],"ports":[{"name":"http","number":80,"protocol":"HTTP"},{"name":"https","number":443,"protocol":"HTTPS"}]}}

      '
  creationTimestamp: '2025-02-12T07:39:29Z'
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:hosts: {}
        f:ports:
          .: {}
          k:{"name":"http"}:
            .: {}
            f:name: {}
            f:number: {}
            f:protocol: {}
          k:{"name":"https"}:
            .: {}
            f:name: {}
            f:number: {}
            f:protocol: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: '2025-02-12T07:39:29Z'
  name: allow-egress-googleapis
  namespace: online-boutique
  resourceVersion: '556332'
  uid: 1815425f-749a-4465-a345-b7039292966d
spec:
  hosts:
  - accounts.google.com
  - '*.googleapis.com'
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
